course_files/2-Traffic-Starting/6-istio-virtual-service.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: demo-virtual-service
  namespace: default
spec:
  hosts:
    - fleetman-staff-service.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: fleetman-staff-service.default.svc.cluster.local
            subset: safe-group
          weight: 0
        - destination:
            host: fleetman-staff-service.default.svc.cluster.local
            subset: risky-group
          weight: 100
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: demo-destination-rule
  namespace: default
spec:
  host: fleetman-staff-service.default.svc.cluster.local
  subsets:
    - labels:
        version: safe
      name: safe-group
    - labels:
        version: risky
      name: risky-group
